--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eletiva 2025 Luciana</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/script.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <h1>Eletiva 2025</h1>
+      <p>Explorando o futuro juntos</p>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#home">Início</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <h1>Bem-vindo à Eletiva 2025</h1>
+      <p>Esta é uma página de exemplo para a Eletiva 2025.</p>
+      <p>Você pode adicionar mais conteúdo aqui.</p>
+      <p>Esta página é um exemplo básico de HTML.</p>
+      <p>Você pode personalizar o conteúdo conforme necessário.</p>
+      <p>Adicione mais informações sobre a Eletiva 2025.</p>
+      <p>Esta página pode incluir links, imagens e muito mais.</p>
+      <p>Explore as possibilidades de personalização.</p>
+      <p>Esta é uma página de exemplo para a Eletiva 2025.</p>
+    </div>
+    <footer>
+      <p>&copy; 2025 Eletiva. Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
