--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/script.js" defer></script>
   </head>
   <body>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <header>
       <h1>Eletiva 2025</h1>
       <p>Explorando o futuro juntos</p>
@@ -31,7 +32,11 @@
       <p>Esta é uma página de exemplo para a Eletiva 2025.</p>
     </div>
     <footer>
-      <p>&copy; 2025 Eletiva. Todos os direitos reservados.</p>
+      <p>
+        &copy; 2025 Eletiva. Todos os direitos reservados a
+        <a href="https://github.com/Limazxz" target="_blank">Limazxz</a>.
+      </p>
+      <p>Desenvolvido por Pedro</p>
     </footer>
   </body>
 </html>
