add responsive navigation with hamburger menu, update styles for better contrast, and enhance footer information

--- a/contato.html
+++ b/contato.html
@@ -16,11 +16,21 @@
       <p>Entre em contato conosco</p>
     </header>
     <nav>
+      <div class="hamburger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
       <ul>
         <li><a href="index.html#home">Início</a></li>
         <li><a href="sobre.html#sobre">Sobre</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="contato.html#contato">Contato</a></li>
       </ul>
+      <div class="nav-dropdown">
+        <a href="index.html#home">Início</a>
+        <a href="sobre.html#sobre">Sobre</a>
+        <a href="contato.html#contato">Contato</a>
+      </div>
     </nav>
     <div class="contact-page">
       <h2>Informações de Contato</h2>
@@ -33,6 +43,10 @@
       <p>
         &copy; 2025 Eletiva. Todos os direitos reservados a
         <a href="https://github.com/Limazxz" target="_blank">Limazxz</a>.
+      </p>
+      <p>
+        Desenvolvido por
+        <a href="https://instagram.com/limazxzn" target="_blank">Pedro</a>.
       </p>
     </footer>
   </body>
