--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     <script src="js/script.js" defer></script>
   </head>
   <body>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <header>
       <h1>Eletiva 2025</h1>
       <p>Explorando o futuro juntos</p>
     </header>
     <nav>
+      <div class="hamburger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
       <ul>
-        <li><a href="#home">Início</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="index.html#home">Início</a></li>
+        <li><a href="sobre.html#sobre">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
+      <div class="nav-dropdown">
+        <a href="index.html#home">Início</a>
+        <a href="sobre.html#sobre">Sobre</a>
+        <!-- //<a href="contato.html">Contato</a> -->
+      </div>
     </nav>
     <div class="container">
       <h1>Bem-vindo à Eletiva 2025</h1>
@@ -36,7 +49,10 @@
         &copy; 2025 Eletiva. Todos os direitos reservados a
         <a href="https://github.com/Limazxz" target="_blank">Limazxz</a>.
       </p>
-      <p>Desenvolvido por Pedro</p>
+      <p>
+        Desenvolvido por
+        <a href="https://instagram.com/limazxzn" target="_blank">Pedro</a>.
+      </p>
     </footer>
   </body>
 </html>
