--- a/sobre.html
+++ b/sobre.html
@@ -44,6 +44,10 @@
         &copy; 2025 Eletiva. Todos os direitos reservados a
         <a href="https://github.com/Limazxz" target="_blank">Limazxz</a>.
       </p>
+      <p>
+        Desenvolvido por
+          <a href="https://instagram.com/limazxzn">Pedro</a>
+      </p>
     </footer>
   </body>
 </html>
