update contact link references for consistency and enhance JavaScript functionality for navigation

--- a/contato.html
+++ b/contato.html
@@ -24,12 +24,12 @@
       <ul>
         <li><a href="index.html#home">Início</a></li>
         <li><a href="sobre.html#sobre">Sobre</a></li>
-        <li><a href="contato.html#contato">Contato</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
       <div class="nav-dropdown">
         <a href="index.html#home">Início</a>
         <a href="sobre.html#sobre">Sobre</a>
-        <a href="contato.html#contato">Contato</a>
+        <a href="contato.html">Contato</a>
       </div>
     </nav>
     <div class="contact-page">
