--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="nav-dropdown">
         <a href="index.html#home">Início</a>
         <a href="sobre.html#sobre">Sobre</a>
-        <!-- //<a href="contato.html">Contato</a> -->
+        <a href="contato.html">Contato</a>
       </div>
     </nav>
     <div class="container">
