update contact page links for consistency, enhance navigation with hash references, and add introductory text

--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato - Eletiva 2025</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <link
@@ -24,16 +25,17 @@
       <ul>
         <li><a href="index.html#home">Início</a></li>
         <li><a href="sobre.html#sobre">Sobre</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="contato.html#contato">Contato</a></li>
       </ul>
       <div class="nav-dropdown">
         <a href="index.html#home">Início</a>
         <a href="sobre.html#sobre">Sobre</a>
-        <a href="contato.html">Contato</a>
+        <a href="contato.html#contato">Contato</a>
       </div>
     </nav>
     <div class="contact-page">
       <h2>Informações de Contato</h2>
+      <p>Aqui você pode conversar com quem teve a ideia de criar este site</p>
       <p>Entre em contato pelo número abaixo:</p>
       <div class="contact-info">
         <p><strong>Telefone:</strong> (14) 99667-7249</p>
