--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <ul>
         <li><a href="index.html#home">Início</a></li>
         <li><a href="sobre.html#sobre">Sobre</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-      <div class="nav-dropdown">
-        <a href="index.html#home">Início</a>
-        <a href="sobre.html#sobre">Sobre</a>
-        <a href="contato.html">Contato</a>
-      </div>
+        <li><a href="contato.html#contato">Contato</a></li>
+    </ul>   
+        <div class="nav-dropdown">
+            <a href="index.html#home">Início</a>
+            <a href="sobre.html#sobre">Sobre</a>
+            <a href="contato.html#contato">Contato</a>
+        </div>
     </nav>
     <div class="container">
       <h1>Bem-vindo à Eletiva 2025</h1>
