enhance layout with responsive container, improve image handling, and update 'Sobre' page content and navigation

--- a/sobre.html
+++ b/sobre.html
@@ -3,41 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eletiva 2025</title>
+    <title>Sobre - Eletiva 2025</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/script.js" defer></script>
   </head>
   <body>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <header>
-      <h1>Sobre a Eletiva 2025</h1>
-      <p>Turismo Não é Só Viajar é Negócio</p>
+      <h1>Sobre</h1>
+      <p>Conheça mais sobre o projeto</p>
     </header>
     <nav>
+      <div class="hamburger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
       <ul>
         <li><a href="index.html#home">Início</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="index.html#contato">Contato</a></li>
+        <li><a href="sobre.html#sobre">Sobre</a></li>
+        <li><a href="contato.html#contato">Contato</a></li>
       </ul>
+      <div class="nav-dropdown">
+        <a href="index.html#home">Início</a>
+        <a href="sobre.html#sobre">Sobre</a>
+        <a href="contato.html#contato">Contato</a>
+      </div>
     </nav>
     <div class="container">
-      <h2>O que é a Eletiva 2025?</h2>
-      <p>
-        A Eletiva 2025 é um projeto educacional focado em explorar novas
-        possibilidades de aprendizado e inovação.
-      </p>
-      <p>
-        Nosso objetivo é preparar os alunos para os desafios do futuro,
-        promovendo criatividade, colaboração e pensamento crítico.
-      </p>
-    </div>
-    <div class="container">
       <h2>Galeria de Imagens</h2>
-      <div class="image-carousel">
-        <img src="img/foto1.jpg" alt="Foto 1" />
-        <img src="img/foto2.jpg" alt="Foto 2" />
-        <img src="img/foto3.jpg" alt="Foto 3" />
-        <img src="img/foto4.jpg" alt="Foto 4" />
-      </div>
+      <img src="img/foto1.jpg" alt="Imagem 1" />
+      <img src="img/foto2.jpg" alt="Imagem 2" />
+      <img src="img/foto3.jpg" alt="Imagem 3" />
+      <img src="img/foto4.jpg" alt="Imagem 4" />
     </div>
     <footer>
       <p>
@@ -46,7 +47,7 @@
       </p>
       <p>
         Desenvolvido por
-          <a href="https://instagram.com/limazxzn">Pedro</a>
+        <a href="https://instagram.com/limazxzn" target="_blank">Pedro</a>.
       </p>
     </footer>
   </body>
