--- a/sobre.html
+++ b/sobre.html
@@ -35,10 +35,21 @@
     </nav>
     <div class="container">
       <h2>Galeria de Imagens</h2>
-      <img src="img/foto1.jpg" alt="Imagem 1" />
-      <img src="img/foto2.jpg" alt="Imagem 2" />
-      <img src="img/foto3.jpg" alt="Imagem 3" />
-      <img src="img/foto4.jpg" alt="Imagem 4" />
+      <div
+        class="carousel-wrapper"
+        style="display: flex; justify-content: center; align-items: center"
+      >
+        <div class="carousel-controls">
+          <button class="prev-btn">&lt;</button>
+          <button class="next-btn">&gt;</button>
+        </div>
+        <div class="image-carousel">
+          <img src="img/foto1.jpg" alt="Imagem 1" />
+          <img src="img/foto2.jpg" alt="Imagem 2" />
+          <img src="img/foto3.jpg" alt="Imagem 3" />
+          <img src="img/foto4.jpg" alt="Imagem 4" />
+        </div>
+      </div>
     </div>
     <footer>
       <p>
