refactor image carousel for improved responsiveness, enhance modal functionality, and streamline layout styles

--- a/sobre.html
+++ b/sobre.html
@@ -35,14 +35,7 @@
     </nav>
     <div class="container">
       <h2>Galeria de Imagens</h2>
-      <div
-        class="carousel-wrapper"
-        style="display: flex; justify-content: center; align-items: center"
-      >
-        <div class="carousel-controls">
-          <button class="prev-btn">&lt;</button>
-          <button class="next-btn">&gt;</button>
-        </div>
+      <div class="carousel-wrapper">
         <div class="image-carousel">
           <img src="img/foto1.jpg" alt="Imagem 1" />
           <img src="img/foto2.jpg" alt="Imagem 2" />
