update index.html with new content for 'Eletiva: Turismo para Negócios - 2025' and enhance navigation structure

--- a/index.html
+++ b/index.html
@@ -26,23 +26,28 @@
         <li><a href="index.html#home">Início</a></li>
         <li><a href="sobre.html#sobre">Sobre</a></li>
         <li><a href="contato.html#contato">Contato</a></li>
-    </ul>   
-        <div class="nav-dropdown">
-            <a href="index.html#home">Início</a>
-            <a href="sobre.html#sobre">Sobre</a>
-            <a href="contato.html#contato">Contato</a>
-        </div>
+      </ul>
+      <div class="nav-dropdown">
+        <a href="index.html#home">Início</a>
+        <a href="sobre.html#sobre">Sobre</a>
+        <a href="contato.html#contato">Contato</a>
+      </div>
     </nav>
     <div class="container">
-      <h1>Bem-vindo à Eletiva 2025</h1>
-      <p>Esta é uma página de exemplo para a Eletiva 2025.</p>
-      <p>Você pode adicionar mais conteúdo aqui.</p>
-      <p>Esta página é um exemplo básico de HTML.</p>
-      <p>Você pode personalizar o conteúdo conforme necessário.</p>
-      <p>Adicione mais informações sobre a Eletiva 2025.</p>
-      <p>Esta página pode incluir links, imagens e muito mais.</p>
-      <p>Explore as possibilidades de personalização.</p>
-      <p>Esta é uma página de exemplo para a Eletiva 2025.</p>
+      <h1>Eletiva: Turismo para Negócios - 2025</h1>
+      <h2>📌 Lema: Turismo não é só viajar, é negócio!</h2>
+        <p>Professora: Luciana</p>
+        <p>Período: 2025</p>
+        <p>Descrição: Eletiva de Turismo para Negócios</p>
+      <p>
+        Esta eletiva explora o turismo como um setor estratégico para negócios,
+        abordando suas oportunidades econômicas, tendências globais e impacto no
+        desenvolvimento de cidades e empresas. Os alunos aprenderão sobre
+        turismo corporativo, eventos, hotelaria, marketing turístico e
+        empreendedorismo no setor. Com atividades práticas, estudos de caso e
+        visitas técnicas, a disciplina mostrará como o turismo vai além do
+        lazer, sendo um motor de crescimento econômico e inovação.
+      </p>
     </div>
     <footer>
       <p>
