update contact page to replace phone number with a WhatsApp link and add styling for contact button

--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,9 @@
       <p>Aqui você pode conversar com quem teve a ideia de criar este site</p>
       <p>Entre em contato pelo número abaixo:</p>
       <div class="contact-info">
-        <p><strong>Telefone:</strong> (14) 99667-7249</p>
+        <a href="https://wa.link/ex2wlq" target="_blank" class="contact-button"
+          >Converse Conosco</a
+        >
       </div>
     </div>
     <footer>
