add company name to 'Eletiva: Turismo para Negócios - 2025' section in index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <h2>📌 Lema: Turismo não é só viajar, é negócio!</h2>
         <p>Professora: Luciana</p>
         <p>Período: 2025</p>
+        <p>Empresa: Fronteiras sem Limites</p>
         <p>Descrição: Eletiva de Turismo para Negócios</p>
       <p>
         Esta eletiva explora o turismo como um setor estratégico para negócios,
