enhance content presentation in 'Eletiva: Turismo para Negócios - 2025' section with improved formatting and icons

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="container">
       <h1>Eletiva: Turismo para Negócios - 2025</h1>
       <h2>📌 Lema: Turismo não é só viajar, é negócio!</h2>
-        <p>Professora: Luciana</p>
-        <p>Período: 2025</p>
-        <p>Empresa: Fronteiras sem Limites</p>
-        <p>Descrição: Eletiva de Turismo para Negócios</p>
+        <p>👩‍🏫 Professora: Luciana</p>
+        <p>⌚ Período: 2025</p>
+        <p>🏢 Empresa: Fronteiras sem Limites</p>
+        <p>📖 Descrição: Eletiva de Turismo para Negócios</p>
       <p>
         Esta eletiva explora o turismo como um setor estratégico para negócios,
         abordando suas oportunidades econômicas, tendências globais e impacto no
