--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
     </div>
     <footer>
       <p>
-        &copy; 2025 Eletiva. Todos os direitos reservados a
-        <a href="https://github.com/Limazxz" target="_blank">Limazxz</a>.
-      </p>
-      <p>
-        Desenvolvido por
-        <a href="https://instagram.com/limazxzn" target="_blank">Pedro</a>.
+        &copy; Feito para uso Exclusivo e pPdagógico da Escola E.E Dinah Lucia Balesstreiro
       </p>
     </footer>
   </body>
